--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: epiworldR
 Type: Package
-Title: What the package does (short line)
+Title: Fast Epi Simulations in R
 Version: 1.0
 Date: 2022-07-20
 Author: Who wrote it
