--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,6 +6,7 @@ Date: 2022-07-20
 Author: Who wrote it
 Maintainer: Who to complain to <yourfault@somewhere.net>
 Description: More about what it does (maybe more than one line)
-License: What license is it under?
-RoxygenNote: 7.2.0
+License: MIT + file LICENSE
+RoxygenNote: 7.2.1
 Encoding: UTF-8
+Roxygen: list(markdown = TRUE)
