--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,3 +10,5 @@ License: MIT + file LICENSE
 RoxygenNote: 7.2.1
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
+LinkingTo: cpp11
+SystemRequirements: C++11
