--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,10 @@ export(ModelSIS)
 export(afun)
 export(agents_smallworld)
 export(first_function)
+export(get_hist_total)
+export(get_reproductive_number)
+export(get_status)
+export(get_transition_probability)
 export(init)
 export(run)
 export(second_function)
