--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,5 +34,7 @@ export(get_reproductive_number)
 export(get_status)
 export(get_transition_probability)
 export(init)
+export(queuing_off)
+export(queuing_on)
 export(run)
 useDynLib(epiworldR, .registration = TRUE)
