--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ S3method(init,epiworld_sir)
 S3method(init,epiworld_sirconn)
 S3method(init,epiworld_sis)
 S3method(init,epiworld_surv)
+S3method(plot,epiworld_seir)
 S3method(print,epiworld_seir)
 S3method(print,epiworld_seirconn)
 S3method(print,epiworld_sir)
