--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -60,6 +60,6 @@ jobs:
       - name: Print logs
         if: always()
         run: |
-          cat check/epiworldR.Rcheck/00install.out
-          cat check/epiworldR.Rcheck/00check.log
-          cat check/epiworldR.Rcheck/tests/tinytest.Rout
+          cat check/epiworldR.Rcheck/00install.out || echo "There's no 00install.out"
+          cat check/epiworldR.Rcheck/00check.log || echo "There's no 00check.out"
+          cat check/epiworldR.Rcheck/tests/tinytest.Rout || echo "There's no tinytest.Rout"
