--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,11 @@ S3method(init,epiworld_sirconn)
 S3method(init,epiworld_sis)
 S3method(init,epiworld_surv)
 S3method(plot,epiworld_seir)
+S3method(plot,epiworld_seirconn)
+S3method(plot,epiworld_sir)
+S3method(plot,epiworld_sirconn)
+S3method(plot,epiworld_sis)
+S3method(plot,epiworld_surv)
 S3method(print,epiworld_seir)
 S3method(print,epiworld_seirconn)
 S3method(print,epiworld_sir)
