Adding the virus() and add_virus() funs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,7 @@ export(ModelSIR)
 export(ModelSIRCONN)
 export(ModelSIS)
 export(ModelSURV)
+export(add_virus)
 export(agents_smallworld)
 export(get_hist_total)
 export(get_reproductive_number)
@@ -43,4 +44,6 @@ export(init)
 export(queuing_off)
 export(queuing_on)
 export(run)
+export(virus)
+export(virus_set_status)
 useDynLib(epiworldR, .registration = TRUE)
