--- a/NAMESPACE
+++ b/NAMESPACE
@@ -35,6 +35,7 @@ export(ModelSIRCONN)
 export(ModelSIS)
 export(ModelSURV)
 export(add_virus)
+export(add_virus_n)
 export(agents_smallworld)
 export(get_hist_total)
 export(get_reproductive_number)
