--- a/NAMESPACE
+++ b/NAMESPACE
@@ -34,6 +34,8 @@ export(ModelSIR)
 export(ModelSIRCONN)
 export(ModelSIS)
 export(ModelSURV)
+export(add_tool)
+export(add_tool_n)
 export(add_virus)
 export(add_virus_n)
 export(agents_smallworld)
@@ -45,6 +47,7 @@ export(init)
 export(queuing_off)
 export(queuing_on)
 export(run)
+export(tool)
 export(virus)
 export(virus_set_status)
 useDynLib(epiworldR, .registration = TRUE)
