Adding *_name, *_param

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(add_virus,epiworld_model)
 S3method(add_virus_n,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(get_hist_total,epiworld_model)
+S3method(get_name,epiworld_model)
+S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_status,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
@@ -20,6 +22,8 @@ S3method(print,epiworld_model)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(run,epiworld_model)
+S3method(set_name,epiworld_model)
+S3method(set_param,epiworld_model)
 export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSIR)
@@ -32,6 +36,8 @@ export(add_virus)
 export(add_virus_n)
 export(agents_smallworld)
 export(get_hist_total)
+export(get_name)
+export(get_param)
 export(get_reproductive_number)
 export(get_status)
 export(get_transition_probability)
@@ -39,6 +45,8 @@ export(init)
 export(queuing_off)
 export(queuing_on)
 export(run)
+export(set_name)
+export(set_param)
 export(tool)
 export(virus)
 export(virus_set_status)
