--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -56,6 +56,7 @@ jobs:
           upload-snapshots: false
           upload-results: false
           check-dir: '"check"'
+          error-on: '"error"'
           
       - name: Print logs
         if: always()
