--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,7 +9,7 @@ S3method(get_hist_total,epiworld_model)
 S3method(get_name,epiworld_model)
 S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
-S3method(get_status,epiworld_model)
+S3method(get_state,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
@@ -38,7 +38,7 @@ export(get_hist_total)
 export(get_name)
 export(get_param)
 export(get_reproductive_number)
-export(get_status)
+export(get_state)
 export(get_transition_probability)
 export(queuing_off)
 export(queuing_on)
@@ -47,6 +47,6 @@ export(set_name)
 export(set_param)
 export(tool)
 export(virus)
-export(virus_set_status)
+export(virus_set_state)
 importFrom(graphics,legend)
 useDynLib(epiworldR, .registration = TRUE)
