Adding functions to remove viruses and tools

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,8 @@ export(get_state)
 export(get_transition_probability)
 export(queuing_off)
 export(queuing_on)
+export(rm_tool)
+export(rm_virus)
 export(run)
 export(set_name)
 export(set_param)
