--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,9 +18,11 @@ S3method(plot,epiworld_sirconn)
 S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_model)
+S3method(print,epiworld_saver)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(run,epiworld_model)
+S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
 S3method(set_param,epiworld_model)
 export(ModelSEIR)
@@ -40,11 +42,13 @@ export(get_param)
 export(get_reproductive_number)
 export(get_state)
 export(get_transition_probability)
+export(make_saver)
 export(queuing_off)
 export(queuing_on)
 export(rm_tool)
 export(rm_virus)
 export(run)
+export(run_multiple)
 export(set_name)
 export(set_param)
 export(tool)
