--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,6 +45,7 @@ export(get_transition_probability)
 export(make_saver)
 export(queuing_off)
 export(queuing_on)
+export(read_multiple_runs)
 export(rm_tool)
 export(rm_virus)
 export(run)
