Adding configure for openMP

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -45,15 +45,16 @@ export(get_transition_probability)
 export(make_saver)
 export(queuing_off)
 export(queuing_on)
-export(read_multiple_runs)
 export(rm_tool)
 export(rm_virus)
 export(run)
 export(run_multiple)
+export(run_multiple_get_results)
 export(set_name)
 export(set_param)
 export(tool)
 export(virus)
 export(virus_set_state)
 importFrom(graphics,legend)
+importFrom(utils,read.table)
 useDynLib(epiworldR, .registration = TRUE)
