--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,9 +1,9 @@
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) -fopenmp
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_CXXFLAGS@
 # 1.2.4 Using C++11 code
 CXX_STD = CXX11
 
 # This is necesary since ARMADILLO now supports OpenMP
-PKG_CXXFLAGS=-fopenmp -I../inst/include/
+PKG_CXXFLAGS=@OPENMP_CXXFLAGS@ -I../inst/include/
 
 # For testing
 #PKG_CXXFLAGS=-Wall
