Adding verbose on/off

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -25,6 +25,8 @@ S3method(run,epiworld_model)
 S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
 S3method(set_param,epiworld_model)
+S3method(verbose_off,epiworld_model)
+S3method(verbose_on,epiworld_model)
 export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSIR)
@@ -53,6 +55,8 @@ export(run_multiple_get_results)
 export(set_name)
 export(set_param)
 export(tool)
+export(verbose_off)
+export(verbose_on)
 export(virus)
 export(virus_set_state)
 importFrom(graphics,legend)
