--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -3,7 +3,7 @@ PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_CXXFLAGS@
 CXX_STD = CXX14
 
 # This is necesary since ARMADILLO now supports OpenMP
-PKG_CXXFLAGS=@OPENMP_CXXFLAGS@ -I../inst/include/
+PKG_CXXFLAGS=@OPENMP_CXXFLAGS@ -I../inst/include/ $(EPI_CONFIG)
 
 # For testing
 #PKG_CXXFLAGS=-Wall
