--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ S3method(add_tool,epiworld_model)
 S3method(add_tool_n,epiworld_model)
 S3method(add_virus,epiworld_model)
 S3method(add_virus_n,epiworld_model)
+S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(get_hist_total,epiworld_model)
 S3method(get_name,epiworld_model)
@@ -37,6 +38,7 @@ export(add_tool)
 export(add_tool_n)
 export(add_virus)
 export(add_virus_n)
+export(agents_from_edgelist)
 export(agents_smallworld)
 export(get_hist_total)
 export(get_name)
