Adding more examples and function to plot repnum

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,12 +6,19 @@ S3method(add_virus,epiworld_model)
 S3method(add_virus_n,epiworld_model)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
+S3method(as.array,epiworld_hist_transition)
 S3method(get_hist_total,epiworld_model)
+S3method(get_hist_transition_matrix,epiworld_model)
+S3method(get_n_replicates,epiworld_model)
+S3method(get_n_tools,epiworld_model)
+S3method(get_n_variants,epiworld_model)
 S3method(get_name,epiworld_model)
+S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_state,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
+S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
 S3method(plot,epiworld_sir)
@@ -41,7 +48,12 @@ export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
 export(get_hist_total)
+export(get_hist_transition_matrix)
+export(get_n_replicates)
+export(get_n_tools)
+export(get_n_variants)
 export(get_name)
+export(get_ndays)
 export(get_param)
 export(get_reproductive_number)
 export(get_state)
