Extract tools and variants hist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,10 @@ S3method(add_virus_n,epiworld_model)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(as.array,epiworld_hist_transition)
+S3method(get_hist_tool,epiworld_model)
 S3method(get_hist_total,epiworld_model)
 S3method(get_hist_transition_matrix,epiworld_model)
+S3method(get_hist_variant,epiworld_model)
 S3method(get_n_replicates,epiworld_model)
 S3method(get_n_tools,epiworld_model)
 S3method(get_n_variants,epiworld_model)
@@ -47,8 +49,10 @@ export(add_virus)
 export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
+export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
+export(get_hist_variant)
 export(get_n_replicates)
 export(get_n_tools)
 export(get_n_variants)
