Print virus and function to print multiple rep numbers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
+S3method(print,epiworld_virus)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(run,epiworld_model)
