Methods deployment of models and methods for add_virus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,10 @@
 S3method(add_tool,epiworld_model)
 S3method(add_tool_n,epiworld_model)
 S3method(add_virus,epiworld_model)
+S3method(add_virus,epiworld_seir)
+S3method(add_virus,epiworld_seirconn)
+S3method(add_virus,epiworld_sir)
+S3method(add_virus,epiworld_sirconn)
 S3method(add_virus_n,epiworld_model)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
