--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
+export(ModelSIRLogit)
 export(ModelSIS)
 export(ModelSURV)
 export(add_tool)
