Adding probability of infection to ModelSIRLogit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,7 +23,7 @@ S3method(get_name,epiworld_model)
 S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
-S3method(get_state,epiworld_model)
+S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
@@ -72,6 +72,7 @@ export(get_ndays)
 export(get_param)
 export(get_reproductive_number)
 export(get_state)
+export(get_states)
 export(get_transition_probability)
 export(make_saver)
 export(queuing_off)
