Updated header and added methods of add_virus

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,10 @@ S3method(add_virus,epiworld_seirconn)
 S3method(add_virus,epiworld_sir)
 S3method(add_virus,epiworld_sirconn)
 S3method(add_virus_n,epiworld_model)
+S3method(add_virus_n,epiworld_seir)
+S3method(add_virus_n,epiworld_seirconn)
+S3method(add_virus_n,epiworld_sir)
+S3method(add_virus_n,epiworld_sirconn)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(as.array,epiworld_hist_transition)
