Interface to set_prob in viruses + virus_fun_logit

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(print,epiworld_agents)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
 S3method(print,epiworld_virus)
+S3method(print,epiworld_virus_fun)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(run,epiworld_model)
@@ -88,11 +89,21 @@ export(run_multiple)
 export(run_multiple_get_results)
 export(set_name)
 export(set_param)
+export(set_prob_death)
+export(set_prob_death_fun)
+export(set_prob_death_ptr)
+export(set_prob_infecting)
+export(set_prob_infecting_fun)
+export(set_prob_infecting_ptr)
+export(set_prob_recovery)
+export(set_prob_recovery_fun)
+export(set_prob_recovery_ptr)
 export(size)
 export(tool)
 export(verbose_off)
 export(verbose_on)
 export(virus)
+export(virus_fun_logit)
 export(virus_set_state)
 importFrom(graphics,legend)
 importFrom(utils,read.table)
