Manipulate virus name and get virus from model

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
 export(get_agents)
+export(get_agents_data_ncols)
 export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
@@ -73,12 +74,15 @@ export(get_n_replicates)
 export(get_n_tools)
 export(get_n_variants)
 export(get_name)
+export(get_name_virus)
 export(get_ndays)
 export(get_param)
 export(get_reproductive_number)
 export(get_state)
 export(get_states)
+export(get_tool)
 export(get_transition_probability)
+export(get_virus)
 export(make_saver)
 export(queuing_off)
 export(queuing_on)
@@ -87,7 +91,9 @@ export(rm_virus)
 export(run)
 export(run_multiple)
 export(run_multiple_get_results)
+export(set_agents_data)
 export(set_name)
+export(set_name_virus)
 export(set_param)
 export(set_prob_death)
 export(set_prob_death_fun)
