API to tools params (set methods)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
+S3method(plot,epiworld_hist)
 S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
@@ -40,6 +41,7 @@ S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
+S3method(print,epiworld_tool_fun)
 S3method(print,epiworld_virus)
 S3method(print,epiworld_virus_fun)
 S3method(queuing_off,epiworld_model)
@@ -74,6 +76,7 @@ export(get_n_replicates)
 export(get_n_tools)
 export(get_n_variants)
 export(get_name)
+export(get_name_tool)
 export(get_name_virus)
 export(get_ndays)
 export(get_param)
@@ -92,7 +95,11 @@ export(run)
 export(run_multiple)
 export(run_multiple_get_results)
 export(set_agents_data)
+export(set_death_reduction)
+export(set_death_reduction_fun)
+export(set_death_reduction_ptr)
 export(set_name)
+export(set_name_tool)
 export(set_name_virus)
 export(set_param)
 export(set_prob_death)
@@ -104,8 +111,18 @@ export(set_prob_infecting_ptr)
 export(set_prob_recovery)
 export(set_prob_recovery_fun)
 export(set_prob_recovery_ptr)
+export(set_recovery_enhancer)
+export(set_recovery_enhancer_fun)
+export(set_recovery_enhancer_ptr)
+export(set_susceptibility_reduction)
+export(set_susceptibility_reduction_fun)
+export(set_susceptibility_reduction_ptr)
+export(set_transmission_reduction)
+export(set_transmission_reduction_fun)
+export(set_transmission_reduction_ptr)
 export(size)
 export(tool)
+export(tool_fun_logit)
 export(verbose_off)
 export(verbose_on)
 export(virus)
