--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
+S3method(print,epiworld_tool)
 S3method(print,epiworld_tool_fun)
 S3method(print,epiworld_virus)
 S3method(print,epiworld_virus_fun)
