--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,9 @@ S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(plot,epiworld_hist)
+S3method(plot,epiworld_multiple_save)
+S3method(plot,epiworld_multiple_save_i)
+S3method(plot,epiworld_multiple_save_reproductive_number)
 S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
