--- a/NAMESPACE
+++ b/NAMESPACE
@@ -57,7 +57,7 @@ S3method(set_param,epiworld_model)
 S3method(size,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
-export(ModelSEIR)
+export()
 export(ModelSEIRCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
