Adding get_transmission

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -89,6 +89,7 @@ export(get_state)
 export(get_states)
 export(get_tool)
 export(get_transition_probability)
+export(get_transmissions)
 export(get_virus)
 export(make_saver)
 export(queuing_off)
