Fixing R CMD check (cc @derekmeyer37)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -133,6 +133,8 @@ export(verbose_on)
 export(virus)
 export(virus_fun_logit)
 export(virus_set_state)
+importFrom(graphics,boxplot)
 importFrom(graphics,legend)
+importFrom(graphics,plot)
 importFrom(utils,read.table)
 useDynLib(epiworldR, .registration = TRUE)
