Adding function for global actions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
+S3method(print,epiworld_globalaction)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
 S3method(print,epiworld_tool)
@@ -64,6 +65,7 @@ export(ModelSIRCONN)
 export(ModelSIRLogit)
 export(ModelSIS)
 export(ModelSURV)
+export(add_global_action)
 export(add_tool)
 export(add_tool_n)
 export(add_virus)
@@ -91,6 +93,8 @@ export(get_tool)
 export(get_transition_probability)
 export(get_transmissions)
 export(get_virus)
+export(globalaction_tool)
+export(globalaction_tool_logit)
 export(make_saver)
 export(queuing_off)
 export(queuing_on)
