Working on DESCRIPTION and README

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,6 +51,8 @@ S3method(print,epiworld_virus)
 S3method(print,epiworld_virus_fun)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
+S3method(queuing_on,epiworld_seirconn)
+S3method(queuing_on,epiworld_sirconn)
 S3method(run,epiworld_model)
 S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
