--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,16 +9,10 @@ Authors@R: c(
   email="g.vegayon@gmail.com", comment = c(ORCID = "0000-0002-3171-0844")),
   person("Centers for Disease Control and Prevention", role="fnd", comment = "Award number 1U01CK000585; 75D30121F00003"
   ))
-Description: A flexible framework for Agent-Based Models (ABM), the epiworldR
-  package provides a fast method for prototyping disease outbreaks and 
-  transmission models. It supports multiple epidemiological models like the 
-  Susceptible-Infected-Susceptible (SIS,) Susceptible-Infected-Removed (SIR,) 
-  Susceptible-Exposed-Infected-Removed (SEIR,) and others, involving arbitrary 
-  mitigation policies and multiple-disease models. Users can specify 
-  infectiousness/susceptibility rates as a function of agents' features, 
-  providing great complexity for the model dynamics. epiworldR uses a C++ 
-  backend, which makes it very fast. Furthermore, epiworldR is ideal for 
-  simulation studies featuring large populations.
+Description: A flexible framework for Agent-Based Models (ABM), the epiworldR package provides methods for prototyping disease outbreaks and transmission models using a C++ backend, making it very fast. It supports multiple epidemiological models, including the Susceptible-Infected-Susceptible (SIS), Susceptible-Infected-Removed (SIR), Susceptible-Exposed-Infected-Removed (SEIR), and others, involving arbitrary mitigation policies and multiple-disease models. Users can specify infectiousness/susceptibility rates as a function of agents’ features, providing great complexity for the model dynamics. Furthermore, epiworldR is ideal for simulation studies featuring large populations.
+URL: https://github.com/UofUEpiBio/epiworldR,
+    https://uofuepibio.github.io/epiworldR/ 
+BugReports: https://github.com/UofUEpiBio/epiworldR/issues
 License: MIT + file LICENSE
 RoxygenNote: 7.2.3
 Encoding: UTF-8
@@ -28,7 +22,9 @@ SystemRequirements: C++11
 Suggests: 
     knitr,
     rmarkdown,
-    tinytest
+    tinytest,
+    netplot,
+    igraph
 Imports: 
     utils
 VignetteBuilder: knitr
