--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,6 +30,7 @@ S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(plot,epiworld_hist)
+S3method(plot,epiworld_hist_transition)
 S3method(plot,epiworld_multiple_save)
 S3method(plot,epiworld_multiple_save_i)
 S3method(plot,epiworld_multiple_save_reproductive_number)
@@ -99,6 +100,7 @@ export(globalaction_set_params)
 export(globalaction_tool)
 export(globalaction_tool_logit)
 export(make_saver)
+export(plot_incidence)
 export(queuing_off)
 export(queuing_on)
 export(rm_tool)
