--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,7 @@ S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
+S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
 S3method(plot,epiworld_multiple_save)
@@ -77,6 +78,7 @@ export(agents_from_edgelist)
 export(agents_smallworld)
 export(get_agents)
 export(get_agents_data_ncols)
+export(get_generation_time)
 export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
@@ -100,6 +102,7 @@ export(globalaction_set_params)
 export(globalaction_tool)
 export(globalaction_tool_logit)
 export(make_saver)
+export(plot_generation_time)
 export(plot_incidence)
 export(queuing_off)
 export(queuing_on)
