--- a/NAMESPACE
+++ b/NAMESPACE
@@ -104,6 +104,7 @@ export(globalaction_tool_logit)
 export(make_saver)
 export(plot_generation_time)
 export(plot_incidence)
+export(plot_reproductive_number)
 export(queuing_off)
 export(queuing_on)
 export(rm_tool)
