Fixing docs in set_name_tool

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -87,6 +87,7 @@ export(get_n_replicates)
 export(get_n_tools)
 export(get_n_variants)
 export(get_name)
+export(get_name_tool)
 export(get_name_virus)
 export(get_ndays)
 export(get_param)
