--- a/NAMESPACE
+++ b/NAMESPACE
@@ -149,5 +149,8 @@ export(virus_set_state)
 importFrom(graphics,boxplot)
 importFrom(graphics,legend)
 importFrom(graphics,plot)
+importFrom(stats,aggregate)
+importFrom(stats,quantile)
+importFrom(stats,sd)
 importFrom(utils,read.table)
 useDynLib(epiworldR, .registration = TRUE)
