--- a/NAMESPACE
+++ b/NAMESPACE
@@ -29,6 +29,9 @@ S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
+S3method(get_transmissions,epiworld_diffnet)
+S3method(get_transmissions,epiworld_model)
+S3method(plot,epiworld_diffnet)
 S3method(plot,epiworld_generation_time)
 S3method(plot,epiworld_hist)
 S3method(plot,epiworld_hist_transition)
@@ -62,6 +65,7 @@ S3method(set_param,epiworld_model)
 S3method(size,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
+export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSIR)
