--- a/NAMESPACE
+++ b/NAMESPACE
@@ -94,6 +94,7 @@ export(get_name)
 export(get_name_tool)
 export(get_name_virus)
 export(get_ndays)
+export(get_network)
 export(get_param)
 export(get_reproductive_number)
 export(get_state)
