--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -52,10 +52,31 @@ jobs:
           needs: check
 
       - uses: r-lib/actions/check-r-package@v2
+        if: ${{ matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release' }}
+        with:
+          args: "--as-cran"
+          upload-snapshots: false
+          upload-results: false
+          check-dir: '"check"'
+          error-on: '"warning"'
+
+      - uses: r-lib/actions/check-r-package@v2
+        if: ${{ matrix.config.os != 'ubuntu-latest' || matrix.config.r != 'devel' }}
         with:
           upload-snapshots: false
           upload-results: false
           check-dir: '"check"'
-          error-on: '"error"'
+          error-on: '"warning"'
+
+      # Upload the built package as an artifact
+      - uses: actions/upload-artifact@v2
+        if: ${{ matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release' }}
+        with:
+          name: ${{ matrix.config.os }}-pkg
+          path: ${{ github.workspace }}/*.tar.gz
+      
+      
+
+        
           
 
