--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -54,7 +54,7 @@ jobs:
       - uses: r-lib/actions/check-r-package@v2
         if: ${{ matrix.config.os == 'ubuntu-latest' && matrix.config.r == 'release' }}
         with:
-          args: "--as-cran"
+          args: 'c("--as-cran")'
           upload-snapshots: false
           upload-results: false
           check-dir: '"check"'
