--- a/.github/workflows/r.yml
+++ b/.github/workflows/r.yml
@@ -61,7 +61,7 @@ jobs:
           error-on: '"warning"'
 
       - uses: r-lib/actions/check-r-package@v2
-        if: ${{ matrix.config.os != 'ubuntu-latest' || matrix.config.r != 'devel' }}
+        if: ${{ matrix.config.os != 'ubuntu-latest' || matrix.config.r != 're;ease' }}
         with:
           upload-snapshots: false
           upload-results: false
