Adding function to get/set incubation

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -121,6 +121,9 @@ export(set_agents_data)
 export(set_death_reduction)
 export(set_death_reduction_fun)
 export(set_death_reduction_ptr)
+export(set_incubation)
+export(set_incubation_fun)
+export(set_incubation_ptr)
 export(set_name)
 export(set_name_tool)
 export(set_name_virus)
