Adding functions to access states and lists of viruses (fails [skip ci])

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
+S3method(print,epiworld_agents_viruses)
 S3method(print,epiworld_globalaction)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
@@ -54,6 +55,7 @@ S3method(print,epiworld_tool)
 S3method(print,epiworld_tool_fun)
 S3method(print,epiworld_virus)
 S3method(print,epiworld_virus_fun)
+S3method(print,epiworld_viruses)
 S3method(queuing_off,epiworld_model)
 S3method(queuing_on,epiworld_model)
 S3method(queuing_on,epiworld_seirconn)
@@ -82,6 +84,8 @@ export(agents_from_edgelist)
 export(agents_smallworld)
 export(get_agents)
 export(get_agents_data_ncols)
+export(get_agents_states)
+export(get_agents_viruses)
 export(get_generation_time)
 export(get_hist_tool)
 export(get_hist_total)
