Fixing bugs in aggregate and improving docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
+S3method(print,epiworld_agents_tools)
 S3method(print,epiworld_agents_viruses)
 S3method(print,epiworld_globalaction)
 S3method(print,epiworld_model)
@@ -85,6 +86,7 @@ export(agents_smallworld)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
+export(get_agents_tools)
 export(get_agents_viruses)
 export(get_generation_time)
 export(get_hist_tool)
