--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,10 +19,10 @@ S3method(as.array,epiworld_hist_transition)
 S3method(get_hist_tool,epiworld_model)
 S3method(get_hist_total,epiworld_model)
 S3method(get_hist_transition_matrix,epiworld_model)
-S3method(get_hist_variant,epiworld_model)
+S3method(get_hist_virus,epiworld_model)
 S3method(get_n_replicates,epiworld_model)
 S3method(get_n_tools,epiworld_model)
-S3method(get_n_variants,epiworld_model)
+S3method(get_n_viruses,epiworld_model)
 S3method(get_name,epiworld_model)
 S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
@@ -92,10 +92,10 @@ export(get_generation_time)
 export(get_hist_tool)
 export(get_hist_total)
 export(get_hist_transition_matrix)
-export(get_hist_variant)
+export(get_hist_virus)
 export(get_n_replicates)
 export(get_n_tools)
-export(get_n_variants)
+export(get_n_viruses)
 export(get_name)
 export(get_name_tool)
 export(get_name_virus)
