--- a/NAMESPACE
+++ b/NAMESPACE
@@ -28,6 +28,7 @@ S3method(get_ndays,epiworld_model)
 S3method(get_param,epiworld_model)
 S3method(get_reproductive_number,epiworld_model)
 S3method(get_states,epiworld_model)
+S3method(get_today_total,epiworld_model)
 S3method(get_transition_probability,epiworld_model)
 S3method(get_transmissions,epiworld_diffnet)
 S3method(get_transmissions,epiworld_model)
@@ -66,6 +67,7 @@ S3method(run_multiple,epiworld_model)
 S3method(set_name,epiworld_model)
 S3method(set_param,epiworld_model)
 S3method(size,epiworld_model)
+S3method(summary,epiworld_model)
 S3method(verbose_off,epiworld_model)
 S3method(verbose_on,epiworld_model)
 export(ModelDiffNet)
@@ -105,6 +107,7 @@ export(get_param)
 export(get_reproductive_number)
 export(get_state)
 export(get_states)
+export(get_today_total)
 export(get_tool)
 export(get_transition_probability)
 export(get_transmissions)
