--- a/src/Makevars.in
+++ b/src/Makevars.in
@@ -1,11 +1,3 @@
-PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_CXXFLAGS@
-# 1.2.4 Using C++17 code
-CXX_STD = @CXX_STD_FLAG@
-
-# This is necesary since ARMADILLO now supports OpenMP
-PKG_CXXFLAGS=@OPENMP_CXXFLAGS@ -I../inst/include/ $(EPI_CONFIG) \
+PKG_LIBS = $(LAPACK_LIBS) $(BLAS_LIBS) $(FLIBS) @OPENMP_FLAG@
+PKG_CXXFLAGS=@OPENMP_FLAG@ -I../inst/include/ $(EPI_CONFIG) \
     -Dprintf_epiworld=Rprintf
-
-# For testing
-#PKG_CXXFLAGS=-Wall
-
