--- a/NAMESPACE
+++ b/NAMESPACE
@@ -112,6 +112,7 @@ export(get_tool)
 export(get_transition_probability)
 export(get_transmissions)
 export(get_virus)
+export(globalaction_fun)
 export(globalaction_set_params)
 export(globalaction_tool)
 export(globalaction_tool_logit)
