GlobalAction as R function + add/remove virus at agent level

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -80,11 +80,14 @@ export(ModelSIS)
 export(ModelSURV)
 export(add_global_action)
 export(add_tool)
+export(add_tool_agent)
 export(add_tool_n)
 export(add_virus)
+export(add_virus_agent)
 export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
+export(change_state)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
@@ -116,6 +119,8 @@ export(globalaction_fun)
 export(globalaction_set_params)
 export(globalaction_tool)
 export(globalaction_tool_logit)
+export(has_tool)
+export(has_virus)
 export(make_saver)
 export(plot_generation_time)
 export(plot_incidence)
