ModelSIRD work OK

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -44,6 +44,7 @@ S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
 S3method(plot,epiworld_sir)
 S3method(plot,epiworld_sirconn)
+S3method(plot,epiworld_sird)
 S3method(plot,epiworld_sis)
 S3method(plot,epiworld_surv)
 S3method(print,epiworld_agent)
@@ -75,6 +76,7 @@ export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
+export(ModelSIRD)
 export(ModelSIRLogit)
 export(ModelSIS)
 export(ModelSURV)
