--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,11 +42,14 @@ S3method(plot,epiworld_multiple_save_reproductive_number)
 S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
+S3method(plot,epiworld_seirdconn)
 S3method(plot,epiworld_sir)
 S3method(plot,epiworld_sirconn)
 S3method(plot,epiworld_sird)
 S3method(plot,epiworld_sis)
+S3method(plot,epiworld_sisd)
 S3method(plot,epiworld_surv)
+S3method(plot,epiworld_survd)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
@@ -74,12 +77,15 @@ S3method(verbose_on,epiworld_model)
 export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
+export(ModelSEIRDCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
 export(ModelSIRD)
 export(ModelSIRLogit)
 export(ModelSIS)
+export(ModelSISD)
 export(ModelSURV)
+export(ModelSURVD)
 export(add_global_action)
 export(add_tool)
 export(add_tool_agent)
