--- a/NAMESPACE
+++ b/NAMESPACE
@@ -46,6 +46,7 @@ S3method(plot,epiworld_seirdconn)
 S3method(plot,epiworld_sir)
 S3method(plot,epiworld_sirconn)
 S3method(plot,epiworld_sird)
+S3method(plot,epiworld_sirdconn)
 S3method(plot,epiworld_sis)
 S3method(plot,epiworld_sisd)
 S3method(plot,epiworld_surv)
@@ -81,6 +82,7 @@ export(ModelSEIRDCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
 export(ModelSIRD)
+export(ModelSIRDCONN)
 export(ModelSIRLogit)
 export(ModelSIS)
 export(ModelSISD)
