--- a/NAMESPACE
+++ b/NAMESPACE
@@ -42,6 +42,7 @@ S3method(plot,epiworld_multiple_save_reproductive_number)
 S3method(plot,epiworld_repnum)
 S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
+S3method(plot,epiworld_seird)
 S3method(plot,epiworld_seirdconn)
 S3method(plot,epiworld_sir)
 S3method(plot,epiworld_sirconn)
@@ -77,6 +78,7 @@ S3method(verbose_on,epiworld_model)
 export(ModelDiffNet)
 export(ModelSEIR)
 export(ModelSEIRCONN)
+export(ModelSEIRD)
 export(ModelSEIRDCONN)
 export(ModelSIR)
 export(ModelSIRCONN)
