--- a/NAMESPACE
+++ b/NAMESPACE
@@ -106,7 +106,6 @@ export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
 export(get_agents_tools)
-export(get_agents_viruses)
 export(get_generation_time)
 export(get_hist_tool)
 export(get_hist_total)
@@ -190,4 +189,4 @@ importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,read.table)
-useDynLib(epiworldR, .registration = TRUE)
+useDynLib(epiworldRfaster, .registration = TRUE)
