--- a/NAMESPACE
+++ b/NAMESPACE
@@ -189,4 +189,4 @@ importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,read.table)
-useDynLib(epiworldRfaster, .registration = TRUE)
+useDynLib(epiworldRdev, .registration = TRUE)
