--- a/NAMESPACE
+++ b/NAMESPACE
@@ -134,6 +134,7 @@ export(globalaction_tool)
 export(globalaction_tool_logit)
 export(has_tool)
 export(has_virus)
+export(initial_states)
 export(make_saver)
 export(plot_generation_time)
 export(plot_incidence)
@@ -189,4 +190,4 @@ importFrom(stats,aggregate)
 importFrom(stats,quantile)
 importFrom(stats,sd)
 importFrom(utils,read.table)
-useDynLib(epiworldRdev, .registration = TRUE)
+useDynLib(epiworldR, .registration = TRUE)
