--- a/NAMESPACE
+++ b/NAMESPACE
@@ -102,6 +102,7 @@ export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
 export(change_state)
+export(clone_model)
 export(get_agents)
 export(get_agents_data_ncols)
 export(get_agents_states)
