Renaming functions to events (from actions) done.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,7 +90,7 @@ export(ModelSIRLogit)
 export(ModelSIS)
 export(ModelSISD)
 export(ModelSURV)
-export(add_global_action)
+export(add_globalevent)
 export(add_tool)
 export(add_tool_agent)
 export(add_tool_n)
@@ -128,9 +128,9 @@ export(get_transition_probability)
 export(get_transmissions)
 export(get_virus)
 export(globalaction_fun)
-export(globalaction_set_params)
-export(globalaction_tool)
-export(globalaction_tool_logit)
+export(globalevent_set_params)
+export(globalevent_tool)
+export(globalevent_tool_logit)
 export(has_tool)
 export(has_virus)
 export(initial_states)
