Adding deprecated functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,7 +58,7 @@ S3method(plot,epiworld_surv)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
-S3method(print,epiworld_globalaction)
+S3method(print,epiworld_globalevent)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
 S3method(print,epiworld_tool)
@@ -128,6 +128,10 @@ export(get_transition_probability)
 export(get_transmissions)
 export(get_virus)
 export(globalaction_fun)
+export(globalaction_set_params)
+export(globalaction_tool)
+export(globalaction_tool_logit)
+export(globalevent_fun)
 export(globalevent_set_params)
 export(globalevent_tool)
 export(globalevent_tool_logit)
