--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: epiworldR
 Type: Package
 Title: Fast Agent-Based Epi Models
-Version: 0.0-4
-Date: 2024-02-07
+Version: 0.0-9999
+Date: 2024-04-07
 Authors@R: c(
   person("Derek", "Meyer", role=c("aut","cre"), 
   email="derekmeyer37@gmail.com", comment = c(ORCID = "0009-0005-1350-6988")),
@@ -21,7 +21,7 @@ URL: https://github.com/UofUEpiBio/epiworldR,
     https://uofuepibio.github.io/epiworldR-workshop/ 
 BugReports: https://github.com/UofUEpiBio/epiworldR/issues
 License: MIT + file LICENSE
-RoxygenNote: 7.2.3
+RoxygenNote: 7.3.1
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 LinkingTo: cpp11
@@ -30,7 +30,8 @@ Suggests:
     rmarkdown,
     tinytest,
     netplot,
-    igraph
+    igraph,
+    data.table
 Imports: 
     utils
 VignetteBuilder: knitr
