Adding mixing models (need examples)

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -48,13 +48,18 @@ S3method(plot,epiworld_seir)
 S3method(plot,epiworld_seirconn)
 S3method(plot,epiworld_seird)
 S3method(plot,epiworld_seirdconn)
+S3method(plot,epiworld_seirmixing)
 S3method(plot,epiworld_sir)
 S3method(plot,epiworld_sirconn)
 S3method(plot,epiworld_sird)
 S3method(plot,epiworld_sirdconn)
+S3method(plot,epiworld_sirmixing)
 S3method(plot,epiworld_sis)
 S3method(plot,epiworld_sisd)
 S3method(plot,epiworld_surv)
+S3method(plot_epi,epiworld_hist)
+S3method(plot_epi,epiworld_hist_virus)
+S3method(plot_epi,epiworld_model)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
@@ -82,11 +87,13 @@ export(ModelSEIR)
 export(ModelSEIRCONN)
 export(ModelSEIRD)
 export(ModelSEIRDCONN)
+export(ModelSEIRMixing)
 export(ModelSIR)
 export(ModelSIRCONN)
 export(ModelSIRD)
 export(ModelSIRDCONN)
 export(ModelSIRLogit)
+export(ModelSIRMixing)
 export(ModelSIS)
 export(ModelSISD)
 export(ModelSURV)
