--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: epiworldR
 Type: Package
 Title: Fast Agent-Based Epi Models
-Version: 0.2-0
+Version: 0.2-0 (dev)
 Date: 2024-04-27
 Authors@R: c(
   person("Derek", "Meyer", role=c("aut","cre"), 
