Adding new entity wrappers

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -153,12 +153,14 @@ export(globalevent_tool_logit)
 export(has_tool)
 export(has_virus)
 export(initial_states)
+export(load_agents_entities_ties)
 export(make_saver)
 export(plot_generation_time)
 export(plot_incidence)
 export(plot_reproductive_number)
 export(queuing_off)
 export(queuing_on)
+export(rm_entity)
 export(rm_tool)
 export(rm_virus)
 export(run)
