Starting off with entity vignette

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(plot_epi,epiworld_model)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
+S3method(print,epiworld_entity)
 S3method(print,epiworld_globalevent)
 S3method(print,epiworld_model)
 S3method(print,epiworld_saver)
@@ -112,6 +113,7 @@ export(change_state)
 export(clone_model)
 export(entity)
 export(entity_add_agent)
+export(entity_get_agents)
 export(entity_rm_agent)
 export(get_agents)
 export(get_agents_data_ncols)
