Updating version of epiworld

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -64,6 +64,7 @@ S3method(plot_epi,epiworld_model)
 S3method(print,epiworld_agent)
 S3method(print,epiworld_agents)
 S3method(print,epiworld_agents_tools)
+S3method(print,epiworld_entities)
 S3method(print,epiworld_entity)
 S3method(print,epiworld_globalevent)
 S3method(print,epiworld_model)
