--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,7 +3,6 @@
 S3method("[",epiworld_agents)
 S3method("[",epiworld_entities)
 S3method(add_tool,epiworld_model)
-S3method(add_tool_n,epiworld_model)
 S3method(add_virus,epiworld_model)
 S3method(add_virus,epiworld_seir)
 S3method(add_virus,epiworld_seirconn)
@@ -13,11 +12,6 @@ S3method(add_virus,epiworld_sir)
 S3method(add_virus,epiworld_sirconn)
 S3method(add_virus,epiworld_sird)
 S3method(add_virus,epiworld_sirdconn)
-S3method(add_virus_n,epiworld_model)
-S3method(add_virus_n,epiworld_seir)
-S3method(add_virus_n,epiworld_seirconn)
-S3method(add_virus_n,epiworld_sir)
-S3method(add_virus_n,epiworld_sirconn)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(as.array,epiworld_hist_transition)
@@ -100,14 +94,12 @@ export(ModelSIRMixing)
 export(ModelSIS)
 export(ModelSISD)
 export(ModelSURV)
-export(add_entity_n)
+export(add_entity)
 export(add_globalevent)
 export(add_tool)
 export(add_tool_agent)
-export(add_tool_n)
 export(add_virus)
 export(add_virus_agent)
-export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
 export(change_state)
@@ -180,6 +172,8 @@ export(set_name)
 export(set_name_tool)
 export(set_name_virus)
 export(set_param)
+export(set_prevalence_tool)
+export(set_prevalence_virus)
 export(set_prob_death)
 export(set_prob_death_fun)
 export(set_prob_death_ptr)
