Adding defunct message

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -98,8 +98,10 @@ export(add_entity)
 export(add_globalevent)
 export(add_tool)
 export(add_tool_agent)
+export(add_tool_n)
 export(add_virus)
 export(add_virus_agent)
+export(add_virus_n)
 export(agents_from_edgelist)
 export(agents_smallworld)
 export(change_state)
