Correcting mixing vignette

--- a/docker/Makefile
+++ b/docker/Makefile
@@ -1,2 +1,7 @@
 all:
 	docker build -t uofuepibio/epiworldr:debug -f Dockerfile .
+
+podman:
+	podman build -t uofuepibio/epiworldr:debug -f Dockerfile .
+
+.PHONY: all podman
