--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,6 +15,7 @@ S3method(add_virus,epiworld_sirdconn)
 S3method(agents_from_edgelist,epiworld_model)
 S3method(agents_smallworld,epiworld_model)
 S3method(as.array,epiworld_hist_transition)
+S3method(get_agents,epiworld_model)
 S3method(get_hist_tool,epiworld_model)
 S3method(get_hist_total,epiworld_model)
 S3method(get_hist_transition_matrix,epiworld_model)
@@ -106,6 +107,12 @@ export(agents_from_edgelist)
 export(agents_smallworld)
 export(change_state)
 export(clone_model)
+export(distribute_entity_randomly)
+export(distribute_entity_to_set)
+export(distribute_tool_randomly)
+export(distribute_tool_to_set)
+export(distribute_virus_randomly)
+export(distribute_virus_set)
 export(entity)
 export(entity_add_agent)
 export(entity_get_agents)
@@ -167,6 +174,9 @@ export(set_agents_data)
 export(set_death_reduction)
 export(set_death_reduction_fun)
 export(set_death_reduction_ptr)
+export(set_distribution_entity)
+export(set_distribution_tool)
+export(set_distribution_virus)
 export(set_incubation)
 export(set_incubation_fun)
 export(set_incubation_ptr)
@@ -174,8 +184,6 @@ export(set_name)
 export(set_name_tool)
 export(set_name_virus)
 export(set_param)
-export(set_prevalence_tool)
-export(set_prevalence_virus)
 export(set_prob_death)
 export(set_prob_death_fun)
 export(set_prob_death_ptr)
